Fix content overflow on mobile devices

--- a/app/assets/css/auth.css
+++ b/app/assets/css/auth.css
@@ -1,3 +1,21 @@
 .captcha-solving {
   transform: translateY(1px);
 }
+
+.auth-box {
+  flex: 1;
+  width: auto;
+  margin-inline: auto;
+  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-block: 0.5rem;
+}
+
+@media screen and (max-width: 500px) {
+  .auth-box {
+    margin-inline: 0.5rem;
+  }
+}
